--- a/common/autoinstallers/lint-staged/package.json
+++ b/common/autoinstallers/lint-staged/package.json
@@ -2,16 +2,20 @@
   "name": "lint-staged",
   "version": "1.0.0",
   "private": true,
+  "type": "commonjs",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
-    "eslint": "^8.37.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "lint-staged": "^13.2.1",
-    "prettier": "^2.8.7",
-    "prettier-plugin-organize-imports": "^3.2.2",
-    "sort-package-json": "^2.4.1",
-    "typescript": "^4.9.5"
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.14.0",
+    "@typescript-eslint/eslint-plugin": "^8.13.0",
+    "@typescript-eslint/parser": "^8.13.0",
+    "eslint": "^9.14.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.12.0",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "sort-package-json": "^2.10.1",
+    "typescript": "^5.6.3"
   }
 }
