--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3.1.1
         with:
-          node-version: 16.x
+          node-version: 20.x
       - name: Restore cache
         uses: actions/cache@v3.2.4
         with:
@@ -28,13 +28,12 @@ jobs:
         run: node common/scripts/install-run-rush.js check
       - name: Assert Changelogs
         run: node common/scripts/install-run-rush.js change --verify
-  test-nest-cqrs:
+  test-packages:
     needs: verify
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [16.x]
-        package: [core, eventstoredb, 'nats']
+        node-version: [20.x, 22.x]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -48,13 +47,13 @@ jobs:
           path: common/temp/pnpm-store
           key: ${{ runner.os }}-{{ hashFiles('common/config/rush/pnpm-lock.yaml') }}
       - name: Rush Install
-        run: node common/scripts/install-run-rush.js install
+        run: node common/scripts/install-run-rush.js install --to tag:package
       - name: Build
         run: | 
-          node common/scripts/install-run-rush.js build -T @nest-cqrs/${{ matrix.package }}
+          node common/scripts/install-run-rush.js build --to tag:package
       - name: Test
         run: | 
-          npm run test --prefix packages/${{ matrix.package }}
+          node common/scripts/install-run-rush.js test --to tag:package
   publsh:
     runs-on: ubuntu-latest
     needs: [verify]
@@ -72,8 +71,8 @@ jobs:
           path: common/temp/pnpm-store
           key: ${{ runner.os }}-{{ hashFiles('common/config/rush/pnpm-lock.yaml') }}
       - name: Rush Install
-        run: node common/scripts/install-run-rush.js install
+        run: node common/scripts/install-run-rush.js install --to tag:package
       - name: Rush Build
-        run: node common/scripts/install-run-rush.js build
+        run: node common/scripts/install-run-rush.js build --to tag:package
       - name: Publish
         run: node common/scripts/install-run-rush.js publish --publish -n ${{ secrets.NPM_TOKEN }} --include-all --set-access-level public
