Add Simpldi Package (#1)
* update ci config

* child container and init testing

* simple provider resolution

* add support for transient providers

* add error case

* resolve from parents

* add init lifecycle interface

* add changelogs

* inital readme and rename packages

* readme and changelogs

* allow warnings for tests

--- a/packages/simpldi/package.json
+++ b/packages/simpldi/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ditty/simpldi",
+  "name": "@dtty/simpldi",
   "version": "0.0.0",
   "description": "Simple and compact Dependency Injection library for TS",
   "license": "ISC",
@@ -9,6 +9,9 @@
     "prebuild": "rimraf ./dist",
     "build": "npm run prebuild && tsc -p tsconfig.build.json",
     "test": "env JEST_ROOT_DIR=packages/simpldi jest --config ../../jest.config.js"
+  },
+  "dependencies": {
+    "reflect-metadata": "~0.2.2"
   },
   "devDependencies": {
     "@swc/core": "~1.9.1",
