--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,15 +15,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - name: Setup Node
-        uses: actions/setup-node@v3.1.1
+        uses: actions/setup-node@v4
         with:
           node-version: 20.x
       - name: Restore cache
-        uses: actions/cache@v3.2.4
+        uses: actions/cache@v4
         with:
           path: common/temp/pnpm-store
           key: ${{ runner.os }}-{{ hashFiles('common/config/rush/pnpm-lock.yaml') }}
@@ -39,13 +39,13 @@ jobs:
         node-version: [20.x]
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Setup Node
-        uses: actions/setup-node@v3.1.1
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
       - name: Restore cache
-        uses: actions/cache@v3.2.4
+        uses: actions/cache@v4
         with:
           path: common/temp/pnpm-store
           key: ${{ runner.os }}-{{ hashFiles('common/config/rush/pnpm-lock.yaml') }}
@@ -63,17 +63,17 @@ jobs:
     if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Init git
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
       - name: Setup Node
-        uses: actions/setup-node@v3.1.1
+        uses: actions/setup-node@v4
         with:
           node-version: 20.x
       - name: Restore cache
-        uses: actions/cache@v3.2.4
+        uses: actions/cache@v4
         with:
           path: common/temp/pnpm-store
           key: ${{ runner.os }}-{{ hashFiles('common/config/rush/pnpm-lock.yaml') }}
@@ -86,6 +86,6 @@ jobs:
       - name: Commit
         run: |
           git add -A
-          git commit --skip-verify -m "[skip ci] version bump"
+          git commit --no-verify -m "[skip ci] version bump"
           git push
       
