--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          token: {{ secrets.PUSH_TOKEN }}
       - name: Init git
         run: |
           git config user.name github-actions
