--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          token: {{ secrets.PUSH_TOKEN }}
+          token: ${{ secrets.PUSH_TOKEN }}
       - name: Init git
         run: |
           git config user.name github-actions
