--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -19,6 +19,7 @@
     "@swc/jest": "~0.2.38",
     "@types/jest": "~29.5.14",
     "jest": "~29.7.0",
+    "reflect-metadata": "~0.2.2",
     "rimraf": "~6.0.1",
     "typescript": "~5.8.3"
   }
