--- a/packages/platform-express/package.json
+++ b/packages/platform-express/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@swc/core": "~1.11.21",
     "@swc/jest": "~0.2.38",
+    "@types/express": "~5.0.1",
     "@types/jest": "~29.5.14",
     "jest": "~29.7.0",
     "rimraf": "~6.0.1",
