--- a/packages/platform-express/tsconfig.build.json
+++ b/packages/platform-express/tsconfig.build.json
@@ -1,4 +1,5 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["**/*/*.spec.ts", "node_modules"]
+  "exclude": ["**/*/*.spec.ts", "node_modules"],
+  "include": ["src"]
 }
