--- a/packages/contracts/tsconfig.build.json
+++ b/packages/contracts/tsconfig.build.json
@@ -1,4 +1,7 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["**/*/*.spec.ts", "node_modules"]
+  "exclude": ["**/*/*.spec.ts", "node_modules"],
+  "compilerOptions": {
+    "types": []
+  }
 }
