--- a/packages/platform-express/tsconfig.build.json
+++ b/packages/platform-express/tsconfig.build.json
@@ -1,5 +1,8 @@
 {
   "extends": "./tsconfig.json",
   "exclude": ["**/*/*.spec.ts", "node_modules"],
-  "include": ["src"]
+  "include": ["src"],
+  "compilerOptions": {
+    "types": []
+  }
 }
