--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
         run: node common/scripts/install-run-rush.js check
       - name: Assert Changelogs
         run: node common/scripts/install-run-rush.js change --verify
-  test-packages:
+  test:
     needs: verify
     runs-on: ubuntu-latest
     strategy:
@@ -50,13 +50,13 @@ jobs:
           path: common/temp/pnpm-store
           key: ${{ runner.os }}-{{ hashFiles('common/config/rush/pnpm-lock.yaml') }}
       - name: Rush Install
-        run: node common/scripts/install-run-rush.js install --to tag:package
+        run: node common/scripts/install-run-rush.js install
       - name: Build
         run: | 
-          node common/scripts/install-run-rush.js build --to tag:package
+          node common/scripts/install-run-rush.js build
       - name: Test
         run: | 
-          node common/scripts/install-run-rush.js test --to tag:package
+          node common/scripts/install-run-rush.js test
   publsh:
     runs-on: ubuntu-latest
     needs: [test-packages]
