--- a/packages/platform-express/package.json
+++ b/packages/platform-express/package.json
@@ -12,7 +12,6 @@
     "test:e2e": "jest --config ./test/jest-e2e.config.js"
   },
   "dependencies": {
-    "@dtty/contracts": "workspace:*",
     "@dtty/core": "workspace:*",
     "@dtty/simpldi": "workspace:*"
   },
@@ -21,8 +20,14 @@
     "@swc/jest": "~0.2.38",
     "@types/express": "~5.0.2",
     "@types/jest": "~29.5.14",
+    "@types/supertest": "~6.0.3",
+    "express": "~5.1.0",
     "jest": "~29.7.0",
     "rimraf": "~6.0.1",
+    "supertest": "~7.1.1",
     "typescript": "~5.8.3"
+  },
+  "peerDependencies": {
+    "express": "~5"
   }
 }
