module system is created

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,6 +11,7 @@
     "test": "env JEST_ROOT_DIR=packages/core jest --config ../../jest.config.js"
   },
   "dependencies": {
+    "@dtty/module": "workspace:*",
     "@dtty/simpldi": "workspace:*"
   },
   "devDependencies": {
