--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -10,13 +10,16 @@
     "build": "npm run prebuild && tsc -p tsconfig.build.json",
     "test": "env JEST_ROOT_DIR=packages/module jest --config ../../jest.config.js"
   },
-  "dependencies": {},
   "devDependencies": {
+    "@dtty/simpldi": "workspace:*",
     "@swc/core": "~1.11.29",
     "@swc/jest": "~0.2.38",
     "@types/jest": "~29.5.14",
     "jest": "~29.7.0",
     "rimraf": "~6.0.1",
     "typescript": "~5.8.3"
+  },
+  "peerDependencies": {
+    "@dtty/simpldi": "workspace:*"
   }
 }
