--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "npm run prebuild && tsc -p tsconfig.build.json",
-    "test": "env JEST_ROOT_DIR=packages/module jest --config ../../jest.config.js"
+    "test": "env JEST_ROOT_DIR=packages/module jest --config ../../jest.config.js --passWithNoTests"
   },
   "devDependencies": {
     "@dtty/simpldi": "workspace:*",
