--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dtty/core",
+  "name": "@dtty/module",
   "version": "0.0.0",
   "description": "Ditty applications",
   "license": "ISC",
@@ -8,19 +8,18 @@
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "npm run prebuild && tsc -p tsconfig.build.json",
-    "test": "env JEST_ROOT_DIR=packages/core jest --config ../../jest.config.js"
-  },
-  "dependencies": {
-    "@dtty/module": "workspace:*",
-    "@dtty/simpldi": "workspace:*"
+    "test": "env JEST_ROOT_DIR=packages/module jest --config ../../jest.config.js --passWithNoTests"
   },
   "devDependencies": {
+    "@dtty/simpldi": "workspace:*",
     "@swc/core": "~1.11.29",
     "@swc/jest": "~0.2.38",
     "@types/jest": "~29.5.14",
     "jest": "~29.7.0",
-    "reflect-metadata": "~0.2.2",
     "rimraf": "~6.0.1",
     "typescript": "~5.8.3"
+  },
+  "peerDependencies": {
+    "@dtty/simpldi": "workspace:*"
   }
 }
